# serverplugins

./: CMakeLists.txt  README.md  TODO.md  TODO.txt
cmake/: CMakeLists.txt  ServerPluginsConfig.cmake
debian/: changelog  control  copyright  serverplugins-doc.install
doc/: CMakeLists.txt  serverplugins.doxy.in
serverplugins/: CMakeLists.txt  collection.cpp  collection.h  definition.h  exception.cpp  exception.h  factory.cpp  factory.h  id.cpp  id.h  names.cpp  names.h  paths.cpp  paths.h  plugin.cpp  plugin.h  repository.cpp  repository.h  server.cpp  server.h  signals.h  utils.h  version.cpp  version.h.in
tests/: CMakeLists.txt  catch_main.cpp  catch_main.h  catch_plugins.cpp  catch_unix_timestamp.cpp  catch_version.cpp  plugin_daemon.cpp  plugin_daemon.h  plugin_testme.cpp  plugin_testme.h
